deploy/kubernetes/overlays/test/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: go-order-system
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: go-order-system
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: go-order-system
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: go-order-system
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: go-order-system
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-timeout-worker
  namespace: go-order-system
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-reconciliation-worker
  namespace: go-order-system
spec:
  replicas: 2
